RESOLVED FIXED110234
[Qt] Fix compilation if Qt was configured with -no-rtti
https://bugs.webkit.org/show_bug.cgi?id=110234
Summary [Qt] Fix compilation if Qt was configured with -no-rtti
Andras Becsi
Reported 2013-02-19 10:02:02 PST
[Qt] Fix compilation if Qt was configured with -no-rtti
Attachments
Patch (1.60 KB, patch)
2013-02-19 10:02 PST, Andras Becsi
no flags
Andras Becsi
Comment 1 2013-02-19 10:02:43 PST
Andras Becsi
Comment 2 2013-02-19 10:08:57 PST
Comment on attachment 189108 [details] Patch Clearing flags on attachment: 189108 Committed r143350: <http://trac.webkit.org/changeset/143350>
Andras Becsi
Comment 3 2013-02-19 10:09:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.