[Qt] Fix compilation if Qt was configured with -no-rtti https://bugs.webkit.org/show_bug.cgi?id=110234

Reviewed by Noam Rosenthal.

Availability of dynamic_cast should be checked.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::updateBackingStoreIfNeeded):

Canonical link: https://commits.webkit.org/128537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143350 268f45cc-cd09-0410-ab3c-d52691b4dbfc