Source/WebCore/platform/graphics/texmap/GraphicsLayerTextureMapper.cpp
@@ -581,7 +581,7 @@ void GraphicsLayerTextureMapper::updateBackingStoreIfNeeded()
     if (dirtyRect.isEmpty())
         return;
 
-#if PLATFORM(QT)
+#if PLATFORM(QT) && !defined(QT_NO_DYNAMIC_CAST)
     ASSERT(dynamic_cast<TextureMapperTiledBackingStore*>(m_backingStore.get()));
 #endif
     TextureMapperTiledBackingStore* backingStore = static_cast<TextureMapperTiledBackingStore*>(m_backingStore.get());
